--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Wallaap | allpapers</title>
+	<title>Wallaap | Wallpapers</title>
 	<link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
 	<!-- CSS -->
 	<link rel="stylesheet" href="./css/style.css">
@@ -11,17 +11,59 @@
 	<link rel="stylesheet" href="./css/bootstrap.min.css">
 </head>
 <body>
-	<nav class="row menu">
-		<div class="col-sm-12 col-md-2 link">
-			<a href="#!" class="logo">Wallaap</a>
-		</div>
-		<div class="col-sm-12 col-md-2 link">
-			<a href="#!">Desktop</a>
-		</div>
-		<div class="col-sm-12 col-md-2 link">
-			<a href="#!">Mobile</a>
+	<nav class="menu">
+		<div class="row">
+			<div class="col-sm-12 col-md-4 link">
+				<a href="#!" class="logo">Wallaap</a>
+			</div>
+			<div class="col-sm-12 col-md-4 link">
+				<a href="#!">Desktop</a>
+			</div>
+			<div class="col-sm-12 col-md-4 link">
+				<a href="#!">Mobile</a>
+			</div>
 		</div>
 	</nav>
+	<main>
+		<section class="container mt-5 home-content">
+			<div>
+				<h1>Wallaap</h1>
+				<p>La mejor web de wallpapers gratis</p>
+			</div>
+			<img class="img-mockup img-fluid" src="./assets/img/mockupx.webp" alt="Desktop wallpaper Mobile wallpaper">
+		</section>
+	</main>
+	<footer>
+		<div class="row">
+			<div class="col-sm-12">
+				<h4>Wallaap</h4>
+				<ul>
+					<li><a href="#!">Desktop wallpapers</a></li>
+					<li><a href="#!">Mobile wallpapers</a></li>
+					<li><a href="#!">Home</a></li>
+				</ul>
+			</div>
+			<div class="col-sm-12">
+				<h4>Social media</h4>
+				<ul>
+					<li>
+						<a href="#!">
+						<img src="./assets/icons/instagram.svg" alt="instagram icon"> Instagram
+						</a>
+					</li>
+					<li>
+						<a href="#!">
+							<img src="./assets/icons/twitter.svg" alt="">
+							Twitter
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="col-sm-12 right">
+				©All right reserved <span>Miguel Amador</span> 
+			</div>
+		</div>
+	</footer>
 	<!-- Bootstrap js-->
 	<script src="./js/bootstrap.bundle.min.js"></script>
 </body>
