añadiendo pagina desktop

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a href="#!" class="logo">Home</a>
 			</div>
 			<div class="col-sm-12 col-md-4 link">
-				<a href="#!">Desktop</a>
+				<a href="./desktop.html">Desktop</a>
 			</div>
 			<div class="col-sm-12 col-md-4 link">
 				<a href="./phone.html">Phone</a>
