--- a/desktop.html
+++ b/desktop.html
@@ -12,24 +12,361 @@
 </head>
 <body>
 	<!--Author: Miguel Amador-->
-	<nav class="menu phone">
+	<nav class="menu">
 		<div class="row">
 			<div class="col-sm-12 col-md-4 link">
 				<a href="./index.html" class="logo">Home</a>
 			</div>
 			<div class="col-sm-12 col-md-4 link">
-				<a href="#!">Desktop</a>
+				<a href="./desktop.html">Desktop</a>
 			</div>
 			<div class="col-sm-12 col-md-4 link">
-				<a href="#!">Phone</a>
+				<a href="./phone.html   ">Phone</a>
 			</div>
 		</div>
 	</nav>
 	<!-- Main content-->
-	<main class="container phone-content">
-		
-    </section>
+	<main class="container desktop-content">
+		<section class="row">
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/1.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/2.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/3.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/4.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/5.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/6.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/7.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/8.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/1.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/2.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/3.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/4.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/5.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/6.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/7.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/8.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/1.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/2.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/3.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/4.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/5.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/6.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/7.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4">
+				<article class="desktop-card">
+						<img class="img-fluid" loading="lazy" src="./assets/img/desktop/8.jpg" alt="wallpaper">
+					<div class="desktop-card-overlay">
+						<a href="#!">
+							Descargar
+							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
+								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+							</svg>
+						</a>
+					</div>
+				</article>
+			</div>
+        </section>
 	</main>
+	<!-- Footer -->
 	<footer>
 		<div class="row container">
 			<div class="col-sm-12 col-md-3">
