--- a/phone.html
+++ b/phone.html
@@ -27,23 +27,20 @@
 	</nav>
 	<!-- Main content-->
 	<main class="container phone-content">
-		<div class="row">
+		<section class="row">
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/1.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/1.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/1.jpg" dowload="wallpaper" target="blank">
-							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
-								<path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-								<path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
-							</svg>
+
 						</a>
 					</div>
 				</article>
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/2.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/2.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/2.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -56,7 +53,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/12.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/12.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/12.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -69,7 +66,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/3.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/3.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/3.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -82,7 +79,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/4.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/4.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/4.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -95,7 +92,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/5.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/5.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/5.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -108,7 +105,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/6.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/6.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/6.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -121,7 +118,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/7.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/7.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/7.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -134,7 +131,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/8.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/8.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/8.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -147,7 +144,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/9.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/9.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/9.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -160,7 +157,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/10.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/10.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/10.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -173,7 +170,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/11.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/11.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/11.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -186,7 +183,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/13.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/13.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/13.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -199,7 +196,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/14.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/14.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/14.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -212,7 +209,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/15.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/15.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/15.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -225,7 +222,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/16.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/16.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/16.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -238,7 +235,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/17.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/17.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/17.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -251,7 +248,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/18.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/18.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/18.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -264,7 +261,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/19.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/19.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/19.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -277,7 +274,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
-					<img loading="lazy" src="./assets/img/phone/20.jpg" alt="">
+					<img class="img-fluid" loading="lazy" src="./assets/img/phone/20.jpg" alt="">
 					<div>
 						<a class="download-button" href="./assets/img/phone/20.jpg" dowload="wallpaper" target="blank">
 							<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-download" viewBox="0 0 16 16">
@@ -295,7 +292,7 @@
 		<div class="row container">
 			<div class="col-sm-12 col-md-3">
 				<h4>Wallaap</h4>
-				<a href="./desktop.html">
+				<a href="./desktop.html	">
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display" viewBox="0 0 16 16">
 						<path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2V4zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z"/>
 					</svg>
