agregando titulo a la pagina desktop y phone

--- a/desktop.html
+++ b/desktop.html
@@ -27,6 +27,9 @@
 	</nav>
 	<!-- Main content-->
 	<main class="container desktop-content">
+		<h1 class="mt-5">
+			Desktop wallpapers
+		</h1>
 		<section class="row">
 			<div class="col-sm-6 col-md-6 col-lg-4">
 				<article class="desktop-card">
