--- a/phone.html
+++ b/phone.html
@@ -27,6 +27,9 @@
 	</nav>
 	<!-- Main content-->
 	<main class="container phone-content">
+		<h1 class="mt-5">
+			Phone wallpapers
+		</h1>
 		<section class="row">
 			<div class="col-sm-6 col-md-4 col-lg-3 phone-col">
 				<article class="phone-card">
