añadiendo titulo a la pagina home

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<main>
 		<section class="container mt-5 home-content">
 			<div>
-				<h1>The best free wallpapers</h1>
+				<h1 class="home-title"><span>Wallaap </span>free wallpapers</h1>
 			</div>
 			<img class="img-mockup img-fluid" src="./assets/img/mockupx.webp" alt="Desktop wallpaper Mobile wallpaper">
 		</section>
